src/objects/Maize_GAP_Adoption__c.object
<CustomObject>
    <fields>
        <fullName>Adoption_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Adoption Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>CKW Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>3.0 Maize GAP Adoptions</relationshipLabel>
        <relationshipName>Maize_GAP_Adoptions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GAP_Adopted__c</fullName>
        <label>GAP Adopted</label>
        <picklist>
            <picklistValues>
                <fullName>GAP 1 Land Preparation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAP 2 Proper Planting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAP 3 Proper Seed Selection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAP 4 Proper Soil Fertility Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAP 5 Pest and Disease Identification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAP 6 Proper Harvesting and Post Harvest Handling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAP 7 Bulking and Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAP 8 Proper Record Keeping</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Maize_Farmer__c</fullName>
        <label>Maize Farmer</label>
        <referenceTo>Maize_Farmer__c</referenceTo>
        <relationshipLabel>3.0 Maize GAP Adoptions</relationshipLabel>
        <relationshipName>Maize_GAP_Adoptions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Maize_GAPs_Adoption__c</fullName>
        <label>Maize GAPs Adoption</label>
        <referenceTo>Maize_GAPs_Adoption__c</referenceTo>
        <relationshipLabel>3.0 Maize GAP Adoptions</relationshipLabel>
        <relationshipName>Maize_GAP_Adoptions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>3.0 Maize GAP Adoption</label>
    <nameField>
        <displayFormat>MGA{YYYY}{MM}{0000}</displayFormat>
        <label>3.0 Maize GAP Adoption Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>3.0 Maize GAP Adoptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>